--- a/app/templates/components/listr-list.hbs
+++ b/app/templates/components/listr-list.hbs
@@ -1,1 +1,8 @@
-{{yield}}
+<div>
+  <h3>Title: {{list.title}}</h3>
+  <ul>
+    {{#each list.items as |item|}}
+      <li>{{item.content}}</li>
+    {{/each}}
+  </ul>
+</div>
