--- a/app/templates/lists.hbs
+++ b/app/templates/lists.hbs
@@ -1,17 +1,10 @@
 <div class="container">
   <h2>ListR</h2>
 
-  {{#each model as |list|}}
-    <div>
-      <h3>Title: {{list.title}}</h3>
-      <ul>
-        {{#each list.items as |item|}}
-          <li>{{item.content}}</li>
-        {{/each}}
-      </ul>
-    </div>
+  {{#each model as |modelList|}}
+    {{listr-list list=modelList}}
   {{/each}}
 </div>
 
-
+{{outlet}}
 {{#link-to 'index'}}Back{{/link-to}}
