Added a strike off the list
I can now click the items in the list and check them off to note that
I have completed the task.

--- a/app/templates/components/listr-list.hbs
+++ b/app/templates/components/listr-list.hbs
@@ -1,5 +1,6 @@
 <div>
-  <h3>Title: {{list.title}}</h3>
+  {{!-- Definiting the click function for the action defined in the Component --}}
+  <h3 class="list-header" {{action "toggleListDetail"}}>Title: {{list.title}}</h3>
   <ul>
     {{#each list.items as |item|}}
       {{listr-list/item item=item}}
